tests/javacresults/fail_badop_frac_duration.txt
Intermediate.java:1: class, interface, or enum expected
Fatal error: exception Failure("Cannot assign duration to f of type frac")
^
1 error
